@@ -43,6 +43,12 @@ allow_multiple_picks_with_same_seed_id = false
 scrollWheelPercentage = 0.30
 # whether to revert scroll direction
 scrollWheelInvert = false
+# whether to merge Catalog upon reading/fetching. In normal operation obspyck
+# only considers the first event in a Catalog read from QuakeML or fetched from
+# a server. Using this switch obspyck instead merges information of all events
+# into one single event. Highly experimental. Should not be used for anything
+# else than review of existing events. USE AT YOUR OWN RISK.
+merge_events_in_catalog = false
 
 [seismic_phases]
 # keys: phase hint (case sensitive)
